[tool.poetry]
name = "kms-reencrypt"
version = "0.1.0"
description = "Python boto3 script to recursively KMS re-encrypt objects"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.17.53"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "kms_reencrypt.app:main"
